--- a/package.json
+++ b/package.json
@@ -12,11 +12,19 @@
   ],
   "author": "Kerry Shetline <kerry@shetline.com>",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kshetline/by-request.git"
+  },
+  "engines": {
+    "node": ">=6.5.0"
+  },
   "bin": "./dist/index.js",
   "dependencies": {
     "@types/glob": "^7.1.1",
     "commander": "^3.0.1",
     "fast-glob": "^3.0.4",
+    "iconv-lite": "^0.5.0",
     "tslint": "^5.19.0",
     "tslint-no-unused-expression-chai": "^0.1.4",
     "typescript": "^3.6.2"
