--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
   },
   "bin": "./dist/index.js",
   "dependencies": {
-    "@types/glob": "^7.1.1",
     "commander": "^3.0.1",
     "fast-glob": "^3.0.4",
     "iconv-lite": "^0.5.0",
     "tslint": "^5.19.0",
     "tslint-no-unused-expression-chai": "^0.1.4",
     "typescript": "^3.6.2"
+  },
+  "devDependencies": {
+    "@types/glob": "^7.1.1"
   }
 }
