--- a/package.json
+++ b/package.json
@@ -4,7 +4,22 @@
   "description": "Fast, Forgiving, Formatting HTML Parser",
   "main": "dist/index.js",
   "scripts": {
-    "start": "tsc && node dist/index.js"
+    "start": "tsc && node dist/index.js",
+    "test": "mocha --require ts-node/register -w --watch-extensions ts src/**/*.spec.ts",
+    "test-once": "nyc mocha --require ts-node/register src/**/*.spec.ts"
+  },
+  "nyc": {
+    "extension": [
+      ".ts",
+      ".tsx"
+    ],
+    "exclude": [
+      "**/*.d.ts"
+    ],
+    "reporter": [
+      "html"
+    ],
+    "all": true
   },
   "keywords": [
     "html",
@@ -25,10 +40,18 @@
     "fast-glob": "^3.0.4",
     "iconv-lite": "^0.5.0",
     "tslint": "^5.19.0",
-    "tslint-no-unused-expression-chai": "^0.1.4",
     "typescript": "^3.6.2"
   },
   "devDependencies": {
-    "@types/glob": "^7.1.1"
+    "@types/chai": "^4.2.2",
+    "@types/glob": "^7.1.1",
+    "@types/mocha": "^5.2.7",
+    "chai": "^4.2.0",
+    "http-server": "^0.11.1",
+    "mocha": "^6.2.0",
+    "nyc": "^14.1.1",
+    "source-map-support": "^0.5.13",
+    "ts-node-dev": "^1.0.0-pre.42",
+    "tslint-no-unused-expression-chai": "^0.1.4"
   }
 }
