Improve html-parser spec, and fix bug caught by the new test.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     ],
     "exclude": [
       "**/*.d.ts",
-      "**/*.spec.ts"
+      "**/*.spec.ts",
+      "src/index.ts"
     ],
     "reporter": [
       "html"
