--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "tsc && node dist/index.js",
     "test": "nyc mocha --require ts-node/register src/**/*.spec.ts",
     "test-dev": "mocha --require ts-node/register -w --watch-extensions ts src/**/*.spec.ts",
-    "test-debug": "nyc mocha --timeout 1800000 --require ts-node/register src/**/*.spec.ts"
+    "test-debug": "nyc mocha --timeout 1800000 --require ts-node/register src/**/*.spec.ts",
+    "speed": "ts-node-dev test/speed-test.ts"
   },
   "nyc": {
     "extension": [
@@ -51,22 +52,23 @@
   },
   "bin": "./dist/index.js",
   "dependencies": {
-    "commander": "^3.0.1",
+    "commander": "^3.0.2",
     "fast-glob": "^3.0.4",
     "iconv-lite": "^0.5.0",
-    "tslint": "^5.19.0",
-    "typescript": "^3.6.2"
+    "tslint": "^5.20.0",
+    "typescript": "^3.6.3"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.2",
+    "@types/chai": "^4.2.3",
     "@types/glob": "^7.1.1",
     "@types/mocha": "^5.2.7",
     "chai": "^4.2.0",
+    "htmlparser-benchmark": "^1.1.3",
     "http-server": "^0.11.1",
     "mocha": "^6.2.0",
     "nyc": "^14.1.1",
     "source-map-support": "^0.5.13",
-    "ts-node-dev": "^1.0.0-pre.42",
+    "ts-node-dev": "^1.0.0-pre.43",
     "tslint-no-unused-expression-chai": "^0.1.4"
   }
 }
