--- a/package.json
+++ b/package.json
@@ -60,9 +60,11 @@
   },
   "devDependencies": {
     "@types/chai": "^4.2.3",
+    "@types/fast-html-parser": "^1.0.0",
     "@types/glob": "^7.1.1",
     "@types/mocha": "^5.2.7",
     "chai": "^4.2.0",
+    "fast-html-parser": "^1.0.1",
     "htmlparser-benchmark": "^1.1.3",
     "http-server": "^0.11.1",
     "mocha": "^6.2.0",
