--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Fortissimo HTML - Flexible, Forgiving, Formatting HTML Parser",
   "main": "dist/src/index.js",
   "scripts": {
+    "watch": "tsc -w",
     "test": "nyc mocha --require ts-node/register src/**/*.spec.ts",
     "test-dev": "mocha --require ts-node/register -w --watch-extensions ts src/**/*.spec.ts",
     "test-debug": "nyc mocha --timeout 1800000 --require ts-node/register src/**/*.spec.ts",
@@ -58,13 +59,12 @@
   "bin": "./dist/src/cli.js",
   "dependencies": {
     "commander": "^3.0.2",
-    "fast-glob": "^3.0.4",
+    "fast-glob": "^3.1.1",
     "iconv-lite": "^0.5.0",
-    "tslint": "^5.20.0",
-    "typescript": "^3.6.3"
+    "tslint": "^5.20.1"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.3",
+    "@types/chai": "^4.2.7",
     "@types/fast-html-parser": "^1.0.0",
     "@types/glob": "^7.1.1",
     "@types/mocha": "^5.2.7",
@@ -72,10 +72,11 @@
     "fast-html-parser": "^1.0.1",
     "htmlparser-benchmark": "^1.1.3",
     "http-server": "^0.11.1",
-    "mocha": "^6.2.0",
+    "mocha": "^6.2.2",
     "nyc": "^14.1.1",
-    "source-map-support": "^0.5.13",
-    "ts-node-dev": "^1.0.0-pre.43",
-    "tslint-no-unused-expression-chai": "^0.1.4"
+    "source-map-support": "^0.5.16",
+    "ts-node-dev": "^1.0.0-pre.44",
+    "tslint-no-unused-expression-chai": "^0.1.4",
+    "typescript": "^3.7.4"
   }
 }
