--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "nyc mocha --require ts-node/register src/**/*.spec.ts",
     "test-dev": "mocha --require ts-node/register -w --watch-extensions ts src/**/*.spec.ts",
     "test-debug": "nyc mocha --timeout 1800000 --require ts-node/register src/**/*.spec.ts",
-    "speed": "ts-node-dev test/speed-test.ts"
+    "speed": "ts-node-dev test/speed-test.ts",
+    "lint": "eslint \"**/*.ts\""
   },
   "nyc": {
     "extension": [
@@ -61,14 +62,24 @@
     "commander": "^3.0.2",
     "fast-glob": "^3.1.1",
     "iconv-lite": "^0.5.0",
-    "tslint": "^5.20.1"
+    "uninstall": "0.0.0"
   },
   "devDependencies": {
     "@types/chai": "^4.2.7",
     "@types/fast-html-parser": "^1.0.0",
     "@types/glob": "^7.1.1",
     "@types/mocha": "^5.2.7",
+    "@typescript-eslint/eslint-plugin": "^2.17.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^2.17.0",
+    "@typescript-eslint/parser": "^2.17.0",
     "chai": "^4.2.0",
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-chai-friendly": "^0.5.0",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "fast-html-parser": "^1.0.1",
     "htmlparser-benchmark": "^1.1.3",
     "http-server": "^0.11.1",
@@ -76,6 +87,7 @@
     "nyc": "^14.1.1",
     "source-map-support": "^0.5.16",
     "ts-node-dev": "^1.0.0-pre.44",
+    "tslint": "^6.0.0",
     "tslint-no-unused-expression-chai": "^0.1.4",
     "typescript": "^3.7.4"
   }
