--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
   },
   "bin": "./dist/src/cli.js",
   "dependencies": {
-    "commander": "^3.0.2",
+    "commander": "^6.1.0",
     "fast-glob": "^3.2.4",
     "iconv-lite": "^0.5.2",
     "tslint": "^5.20.1"
@@ -68,6 +68,7 @@
     "@types/fast-html-parser": "^1.0.0",
     "@types/glob": "^7.1.3",
     "@types/mocha": "^5.2.7",
+    "@types/node": "^14.6.4",
     "chai": "^4.2.0",
     "fast-html-parser": "^1.0.1",
     "htmlparser-benchmark": "^1.1.3",
