--- a/package.json
+++ b/package.json
@@ -58,27 +58,27 @@
   },
   "bin": "./dist/src/cli.js",
   "dependencies": {
-    "commander": "^6.1.0",
-    "fast-glob": "^3.2.4",
+    "commander": "^6.2.1",
+    "fast-glob": "^3.2.5",
     "iconv-lite": "^0.5.2",
     "tslint": "^5.20.1"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.12",
-    "@types/fast-html-parser": "^1.0.0",
+    "@types/chai": "^4.2.17",
+    "@types/fast-html-parser": "^1.0.1",
     "@types/glob": "^7.1.3",
     "@types/mocha": "^5.2.7",
-    "@types/node": "^14.6.4",
-    "chai": "^4.2.0",
+    "@types/node": "^14.14.44",
+    "chai": "^4.3.4",
     "fast-html-parser": "^1.0.1",
     "htmlparser-benchmark": "^1.1.3",
     "http-server": "^0.12.3",
-    "mocha": "^8.1.3",
+    "mocha": "^8.3.2",
     "nyc": "^14.1.1",
     "source-map-support": "^0.5.19",
-    "ts-node-dev": "^1.0.0-pre.62",
+    "ts-node-dev": "^1.1.6",
     "tslint-eslint-rules": "^5.4.0",
     "tslint-no-unused-expression-chai": "^0.1.4",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.9"
   }
 }
