--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "target": "ES6",
+    "target": "ES2020",
     "module": "commonjs",
-    "outDir": "./dist/src",
+    "outDir": "./dist",
     "noImplicitAny": true,
     "noImplicitThis": true,
     "alwaysStrict": true,
