--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test-dev": "mocha --require ts-node/register -w --watch-extensions ts src/**/*.spec.ts",
     "test-debug": "nyc mocha --timeout 1800000 --require ts-node/register src/**/*.spec.ts",
     "speed": "ts-node-dev test/speed-test.ts",
-    "lint": "tslint --project .",
+    "lint": "eslint 'src/**/*.ts'",
     "prepack": "rimraf dist/ && tsc"
   },
   "nyc": {
@@ -71,7 +71,15 @@
     "@types/glob": "^7.1.3",
     "@types/mocha": "^5.2.7",
     "@types/node": "^14.14.44",
+    "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "@typescript-eslint/parser": "^4.31.0",
     "chai": "^4.3.4",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-chai-friendly": "^0.7.2",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
     "fast-html-parser": "^1.0.1",
     "htmlparser-benchmark": "^1.1.3",
     "http-server": "^0.12.3",
