Start of process to reorganize project to contain both library and demo app.

--- a/lib/tsconfig.json
+++ b/lib/tsconfig.json
@@ -13,7 +13,10 @@
     "declarationMap": true,
     "sourceMap": true,
     "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "types": [
+      "jasmine", "mocha", "node"
+    ]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.spec.ts"]
