Clean up audit and testing.

--- a/lib/tsconfig.json
+++ b/lib/tsconfig.json
@@ -15,9 +15,12 @@
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
     "types": [
-      "jasmine", "mocha", "node"
+      "mocha", "node"
     ]
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "**/*.spec.ts"]
+  "include": ["ambient.d.ts", "src/**/*"],
+  "exclude": ["node_modules", "**/*.spec.ts"],
+  "ts-node": {
+    "files": true
+  }
 }
