--- a/lib/package.json
+++ b/lib/package.json
@@ -27,7 +27,7 @@
     "test": "nyc mocha --require ts-node/register src/**/*.spec.ts && echo \"Restore HTML reporting!\"",
     "test-dev": "mocha --require ts-node/register -w --watch-extensions ts src/**/*.spec.ts",
     "test-debug": "nyc mocha --timeout 1800000 --require ts-node/register src/**/*.spec.ts",
-    "speed": "ts-node-dev test/speed-test.ts",
+    "speed": "ts-node --files test/speed-test.ts",
     "lint": "eslint 'src/**/*.ts'",
     "prepack": "rimraf dist/ && tsc"
   },
@@ -35,15 +35,14 @@
     "@tubular/util": "^4.6.0",
     "commander": "^6.2.1",
     "fast-glob": "^3.2.5",
-    "iconv-lite": "^0.5.2",
-    "tslint": "^5.20.1"
+    "iconv-lite": "^0.5.2"
   },
   "devDependencies": {
     "@types/chai": "^4.2.17",
     "@types/fast-html-parser": "^1.0.1",
     "@types/glob": "^7.1.3",
     "@types/mocha": "^5.2.7",
-    "@types/node": "^14.14.44",
+    "@types/node": "^14.18.11",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
     "chai": "^4.3.4",
@@ -55,14 +54,12 @@
     "eslint-plugin-promise": "^5.1.0",
     "fast-html-parser": "^1.0.1",
     "htmlparser-benchmark": "^1.1.3",
-    "http-server": "^0.12.3",
-    "mocha": "^8.3.2",
-    "nyc": "^14.1.1",
+    "http-server": "^14.1.0",
+    "mocha": "^9.2.0",
+    "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
     "source-map-support": "^0.5.19",
-    "ts-node-dev": "^1.1.6",
-    "tslint-eslint-rules": "^5.4.0",
-    "tslint-no-unused-expression-chai": "^0.1.4",
+    "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
   },
   "nyc": {
