--- a/angular.json
+++ b/angular.json
@@ -3,77 +3,69 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
+    "fortissimo-html": {
+      "projectType": "library",
+      "root": "projects/fortissimo-html",
+      "sourceRoot": "projects/fortissimo-html/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/fortissimo-html/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/fortissimo-html/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/fortissimo-html/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        }
+      }
+    },
     "fortissimo-html-demo": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "style": "scss",
-          "skipTests": true
+          "style": "scss"
         },
-        "@schematics/angular:class": {
-          "skipTests": true
-        },
-        "@schematics/angular:directive": {
-          "skipTests": true
-        },
-        "@schematics/angular:guard": {
-          "skipTests": true
-        },
-        "@schematics/angular:module": {
-        },
-        "@schematics/angular:pipe": {
-          "skipTests": true
-        },
-        "@schematics/angular:service": {
-          "skipTests": true
+        "@schematics/angular:application": {
+          "strict": true
         }
       },
-      "root": "",
-      "sourceRoot": "src",
+      "root": "projects/fortissimo-html-demo",
+      "sourceRoot": "projects/fortissimo-html-demo/src",
       "prefix": "fh",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist",
-            "index": "src/index.html",
-            "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "tsconfig.app.json",
+            "outputPath": "dist/fortissimo-html-demo",
+            "index": "projects/fortissimo-html-demo/src/index.html",
+            "main": "projects/fortissimo-html-demo/src/main.ts",
+            "polyfills": "projects/fortissimo-html-demo/src/polyfills.ts",
+            "tsConfig": "projects/fortissimo-html-demo/tsconfig.app.json",
+            "inlineStyleLanguage": "scss",
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
+              "projects/fortissimo-html-demo/src/favicon.ico",
+              "projects/fortissimo-html-demo/src/assets"
             ],
             "styles": [
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeng/resources/themes/nova/theme.css",
               "node_modules/primeicons/primeicons.css",
-              "src/styles.scss"
+              "projects/fortissimo-html-demo/src/styles.scss"
             ],
             "scripts": [],
             "vendorChunk": true,
-            "extractLicenses": false,
-            "buildOptimizer": false,
             "sourceMap": true,
-            "optimization": false,
-            "namedChunks": true
           },
           "configurations": {
             "production": {
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
-                }
-              ],
-              "optimization": true,
-              "outputHashing": "all",
-              "sourceMap": false,
-              "namedChunks": false,
-              "extractLicenses": true,
-              "vendorChunk": false,
-              "buildOptimizer": true,
               "budgets": [
                 {
                   "type": "initial",
@@ -85,21 +77,41 @@
                   "maximumWarning": "6kb",
                   "maximumError": "10kb"
                 }
-              ]
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "projects/fortissimo-html-demo/src/environments/environment.ts",
+                  "with": "projects/fortissimo-html-demo/src/environments/environment.prod.ts"
+                }
+              ],
+              "outputHashing": "all"
+            },
+            "development": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": {
+                "scripts": true,
+                "styles": true,
+                "vendor": true
+              },
+              "namedChunks": true
             }
           },
-          "defaultConfiguration": ""
+          "defaultConfiguration": "production"
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
-          "options": {
-            "browserTarget": "fortissimo-html-demo:build"
-          },
           "configurations": {
             "production": {
               "browserTarget": "fortissimo-html-demo:build:production"
+            },
+            "development": {
+              "browserTarget": "fortissimo-html-demo:build:development"
             }
-          }
+          },
+          "defaultConfiguration": "development"
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
@@ -110,37 +122,39 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "src/test.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "tsconfig.spec.json",
-            "karmaConfig": "karma.conf.js",
+            "main": "projects/fortissimo-html-demo/src/test.ts",
+            "polyfills": "projects/fortissimo-html-demo/src/polyfills.ts",
+            "tsConfig": "projects/fortissimo-html-demo/tsconfig.spec.json",
+            "karmaConfig": "projects/fortissimo-html-demo/karma.conf.js",
+            "inlineStyleLanguage": "scss",
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
+              "projects/fortissimo-html-demo/src/favicon.ico",
+              "projects/fortissimo-html-demo/src/assets"
             ],
             "styles": [
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeng/resources/themes/nova-light/theme.css",
               "node_modules/primeicons/primeicons.css",
-              "src/styles.scss"
+              "projects/fortissimo-html-demo/src/styles.scss"
             ],
             "scripts": []
           }
         },
-        "e2e": {
-          "builder": "@angular-devkit/build-angular:protractor",
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
           "options": {
-            "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "fortissimo-html-demo:serve"
-          },
-          "configurations": {
-            "production": {
-              "devServerTarget": "fortissimo-html-demo:serve:production"
-            }
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
           }
         }
       }
-    }},
-  "defaultProject": "fortissimo-html-demo"
+    }
+  },
+  "defaultProject": "fortissimo-html-demo",
+  "cli": {
+    "analytics": false
+  }
 }
