--- a/package.json
+++ b/package.json
@@ -1,66 +1,64 @@
 {
   "name": "fortissimo-html-demo",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --configuration production --sourceMap=true",
-    "speed": "cd lib && (npm run speed || echo '') && cd ..",
+    "build:demo": "ng build fortissimo-html-demo",
     "test": "ng test",
-    "test-lib": "cd lib && (npm run test || echo '') && cd ..",
-    "lint": "eslint 'src/**/*.ts' 'lib/src/**/*.ts'",
-    "e2e": "ng e2e",
-    "publish": "cd lib && npm publish",
-    "publish-dry": "cd lib && npm publish --dry-run"
+    "test-lib": "cd projects/fortissimo-html && (npm run test || echo '') && cd ../..",
+    "lint": "eslint 'projects/**/src/**/*.ts'",
+    "publish-dry": "npm run build && npm publish ./dist/xxx/ --dry-run",
+    "publish": "npm run build && npm publish ./dist/xxx/"
   },
-  "private": true,
   "dependencies": {
-    "@angular/animations": "^13.2.2",
-    "@angular/cdk": "^13.2.6",
-    "@angular/common": "^13.2.2",
-    "@angular/compiler": "^13.2.2",
-    "@angular/core": "^13.2.2",
-    "@angular/forms": "^13.2.2",
-    "@angular/platform-browser": "^13.2.2",
-    "@angular/platform-browser-dynamic": "^13.2.2",
-    "@angular/router": "^13.2.2",
-    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@angular/animations": "^14.2.3",
+    "@angular/common": "^14.2.3",
+    "@angular/compiler": "^14.2.3",
+    "@angular/core": "^14.2.3",
+    "@angular/forms": "^14.2.3",
+    "@angular/platform-browser": "^14.2.3",
+    "@angular/platform-browser-dynamic": "^14.2.3",
+    "@angular/router": "^14.2.3",
+    "@fortawesome/fontawesome-free": "^6.2.0",
     "@tubular/util": "^4.13.0",
     "detect-resize": "^0.1.5",
     "lodash": "^4.17.21",
-    "primeicons": "^5.0.0",
-    "primeng": "^13.1.1",
-    "rxjs": "^6.6.7",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "primeicons": "^6.0.1",
+    "primeng": "^14.1.2",
+    "rxjs": "~7.5.5",
+    "tslib": "^2.4.0",
+    "zone.js": "~0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.2.3",
-    "@angular/cli": "^13.2.3",
-    "@angular/compiler-cli": "^13.2.2",
-    "@angular/language-service": "^13.2.2",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "^2.0.8",
-    "@types/lodash": "^4.14.168",
-    "@types/node": "^12.20.12",
-    "@typescript-eslint/eslint-plugin": "^5.9.1",
-    "@typescript-eslint/parser": "^5.9.1",
-    "codelyzer": "^6.0.0",
-    "eslint": "^7.32.0",
-    "eslint-config-standard": "^16.0.3",
+    "@angular-devkit/build-angular": "^14.2.3",
+    "@angular-eslint/eslint-plugin": "^14.1.2",
+    "@angular-eslint/eslint-plugin-template": "^14.1.2",
+    "@angular-eslint/template-parser": "^14.1.2",
+    "@angular/cli": "^14.2.3",
+    "@angular/compiler-cli": "^14.2.3",
+    "@types/chai": "^4.3.3",
+    "@types/lodash": "^4.14.186",
+    "@types/mocha": "^10.0.0",
+    "@types/node": "^14.14.31",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
+    "@typescript-eslint/parser": "^5.39.0",
+    "eslint": "^8.25.0",
+    "eslint-config-standard": "^17.0.0",
     "eslint-plugin-chai-friendly": "^0.7.2",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsdoc": "^39.3.6",
     "eslint-plugin-node": "^11.1.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.16",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.5.5"
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-promise": "^6.0.1",
+    "jasmine-core": "~4.0.0",
+    "karma": "~6.4.1",
+    "karma-chrome-launcher": "~3.1.1",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~4.0.2",
+    "karma-jasmine-html-reporter": "^1.7.0",
+    "typescript": "~4.7.3"
   }
 }
