--- a/projects/fortissimo-html-demo/tsconfig.spec.json
+++ b/projects/fortissimo-html-demo/tsconfig.spec.json
@@ -1,7 +1,8 @@
+/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
-  "extends": "./tsconfig.json",
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "./out-tsc/spec",
+    "outDir": "../../out-tsc/spec",
     "types": [
       "jasmine",
       "node"
@@ -12,7 +13,6 @@
     "src/polyfills.ts"
   ],
   "include": [
-    "./ambient.d.ts",
     "src/**/*.spec.ts",
     "src/**/*.d.ts"
   ]
