--- a/projects/fortissimo-html/package.json
+++ b/projects/fortissimo-html/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fortissimo-html",
-  "version": "1.0.0-alpha.3",
+  "version": "1.0.0-alpha.4",
   "description": "Fortissimo HTML - Flexible, Forgiving, Formatting HTML Parser",
   "main": "dist/index.js",
   "keywords": [
@@ -22,6 +22,7 @@
     "node": ">=6.5.0"
   },
   "bin": "./dist/cli.js",
+  "type": "module",
   "scripts": {
     "watch": "tsc -w",
     "test": "nyc mocha --require ts-node/register src/**/*.spec.ts && echo \"Restore HTML reporting!\"",
@@ -32,35 +33,35 @@
     "prepack": "rimraf dist/ && tsc"
   },
   "dependencies": {
-    "@tubular/util": "^4.6.0",
-    "commander": "^6.2.1",
-    "fast-glob": "^3.2.5",
-    "iconv-lite": "^0.5.2"
+    "@tubular/util": "^4.13.0",
+    "commander": "^9.4.1",
+    "fast-glob": "^3.2.12",
+    "iconv-lite": "^0.6.3"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.17",
-    "@types/fast-html-parser": "^1.0.1",
-    "@types/glob": "^7.1.3",
-    "@types/mocha": "^5.2.7",
-    "@types/node": "^14.18.11",
-    "@typescript-eslint/eslint-plugin": "^4.31.0",
-    "@typescript-eslint/parser": "^4.31.0",
-    "chai": "^4.3.4",
-    "eslint": "^7.32.0",
-    "eslint-config-standard": "^16.0.3",
+    "@types/chai": "^4.3.3",
+    "@types/fast-html-parser": "^1.0.2",
+    "@types/glob": "^8.0.0",
+    "@types/mocha": "^10.0.0",
+    "@types/node": "^14.14.31",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
+    "@typescript-eslint/parser": "^5.39.0",
+    "chai": "^4.3.6",
+    "eslint": "^8.25.0",
+    "eslint-config-standard": "^17.0.0",
     "eslint-plugin-chai-friendly": "^0.7.2",
-    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-promise": "^6.0.1",
     "fast-html-parser": "^1.0.1",
     "htmlparser-benchmark": "^1.1.3",
-    "http-server": "^14.1.0",
-    "mocha": "^9.2.0",
+    "http-server": "^14.1.1",
+    "mocha": "^10.0.0",
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
-    "source-map-support": "^0.5.19",
-    "ts-node": "^10.5.0",
-    "typescript": "^4.5.5"
+    "source-map-support": "^0.5.21",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   },
   "nyc": {
     "extension": [
