--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,6 @@ chrome-profiler-events*.json
 speed-measure-plugin*.json
 
 # IDEs and editors
-/.idea
 .project
 .classpath
 .c9/
@@ -32,7 +31,7 @@ speed-measure-plugin*.json
 .history/*
 
 # misc
-/.angular
+/.angular/cache
 /.sass-cache
 /connect.lock
 /coverage
