--- a/projects/fortissimo-html/package.json
+++ b/projects/fortissimo-html/package.json
@@ -3,6 +3,17 @@
   "version": "1.0.0-alpha.4",
   "description": "Fortissimo HTML - Flexible, Forgiving, Formatting HTML Parser",
   "main": "dist/index.js",
+  "module": "dist/fesm2015/index.js",
+  "esm2015": "dist/index.js",
+  "fesm2015": "dist/fesm2015/index.js",
+  "typings": "dist/index",
+  "sideEffects": false,
+  "exports": {
+    "import": "./dist/fesm2015/index.js",
+    "require": "./dist/cjs/index.js",
+    "script": "./dist/umd/index.js",
+    "default": "./dist/cjs/index.js"
+  },
   "keywords": [
     "html",
     "parse",
@@ -25,8 +36,9 @@
   "type": "module",
   "scripts": {
     "build": "rimraf dist/ && tsc && rollup -c -m && webpack",
+    "lint": "eslint 'src/**/*.ts' '**/*.cjs'",
     "prepublishOnly": "npm run build",
-    "lint": "eslint 'src/**/*.ts' '**/*.cjs'"
+    "test": "nyc --reporter=html mocha --require ts-node/register src/**/*.spec.ts"
   },
   "dependencies": {
     "@tubular/util": "^4.13.0",
@@ -43,8 +55,8 @@
     "@types/chai": "^4.3.3",
     "@types/fast-html-parser": "^1.0.2",
     "@types/glob": "^8.0.0",
-    "@types/mocha": "^10.0.0",
-    "@types/node": "^14.14.31",
+    "@types/mocha": "^8.2.2",
+    "@types/node": "^15.14.9",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
     "babel-loader": "^8.2.2",
@@ -58,7 +70,7 @@
     "fast-html-parser": "^1.0.1",
     "htmlparser-benchmark": "^1.1.3",
     "http-server": "^14.1.1",
-    "mocha": "^10.0.0",
+    "mocha": "^9.2.2",
     "nyc": "^15.1.0",
     "replace": "^1.2.1",
     "rimraf": "^3.0.2",
@@ -66,7 +78,8 @@
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
     "terser-webpack-plugin": "^5.1.4",
-    "typescript": "^4.8.4",
+    "ts-node": "~10.0.0",
+    "typescript": "~4.3.5",
     "webpack": "^5.42.0",
     "webpack-cli": "^4.7.2",
     "webpack-node-externals": "^3.0.0"
