Prepare for Angular update.

--- a/angular.json
+++ b/angular.json
@@ -62,7 +62,7 @@
             ],
             "scripts": [],
             "vendorChunk": true,
-            "sourceMap": true,
+            "sourceMap": true
           },
           "configurations": {
             "production": {
